<resources>
    <string name="app_name">SoleekLabTask</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="passwordConfirmation">Confirm password</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="already_have_one">Already have one?</string>
    <string name="logout">Logout</string>
</resources>
