<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    >
    <EditText
        android:id="@+id/email_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:autofillHints="Email"
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        tools:ignore="UnusedAttribute" />
    <EditText
        android:id="@+id/password_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:autofillHints="password"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        tools:ignore="UnusedAttribute" />
    <EditText
        android:id="@+id/password_confirmation_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:autofillHints="password"
        android:ems="10"
        android:hint="@string/passwordConfirmation"
        android:inputType="textPassword"
        tools:ignore="UnusedAttribute" />
    <Button
        android:id="@+id/register_bt"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="#fff"
        android:background="@color/colorAccent"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="@+id/login_bt"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/already_have_one"
        android:textSize="15sp"
        />
    <TextView
        android:id="@+id/login_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/login"
        android:textColor="@color/colorAccent"
        />
</LinearLayout>